Change java heap and perm space for MarkDuplicates.