@@ -112,7 +112,7 @@ samtools sort ${RNAME}_${QNAME}.bam ${RNAME}_${QNAME}-s
 samtools index ${RNAME}_${QNAME}-s.bam
 
 # Mark duplicates and sort
-java -XX:ParallelGCThreads=$THREADS \
+java -XX:ParallelGCThreads=$THREADS -XX:MaxPermSize=1g -XX:+CMSClassUnloadingEnabled \
     -jar $MRKDUP \
     INPUT=${RNAME}_${QNAME}-s.bam \
     OUTPUT=${RNAME}_${QNAME}-smd.bam \
